--- a/tool_prototyping.ipynb
+++ b/tool_prototyping.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7194c4c3",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
     "\n",
     "# Parses output of bedtools genomecov -d\n",
     "\n",
-    "fpath = '/storage/NFS/ANALYSIS/DNAseq/test/daisy_test/p_fal_BMGF-Fidock-8149R1-B2_p.genomecov.txt'\n",
+    "fpath = '/storage/NFS/ANALYSIS/DNAseq/BAM_coverage/p_fal_BMGF-Fidock-8149R1-B2_p.genomecov.txt'\n",
     "f = open(fpath, 'r')\n",
     "\n",
     "chrom_pos_cov_dict = defaultdict(dict)\n",
@@ -31,17 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "29672396",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7ff6db7d67d0>]"
+       "[<matplotlib.lines.Line2D at 0x7ff372330af0>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -67,6 +67,14 @@
     "fig, ax = plt.subplots(figsize=(20, 4))\n",
     "ax.plot(pos_list, cov_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "414be909",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
