--- a/tool_prototyping.ipynb
+++ b/tool_prototyping.ipynb
@@ -115,8 +115,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "16d450ce",
+   "cell_type": "markdown",
+   "id": "0205a3de",
    "metadata": {},
    "source": [
     "# Genome coverage"
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "605c90d2",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e0c355fc",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "c68e0982",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "d4c06435",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "efb6c645",
    "metadata": {},
    "outputs": [
@@ -4424,13 +4424,7 @@
       "PF3D7_0100100\tVal1818Ile\terythrocyte membrane protein 1, PfEMP1 (VAR)\n",
       "PF3D7_0100300\tAsp1251Glu\terythrocyte membrane protein 1, PfEMP1 (VAR)\n",
       "PF3D7_0100300\tLys1190Thr\terythrocyte membrane protein 1, PfEMP1 (VAR)\n",
-      "PF3D7_0100300\tVal1028Leu\terythrocyte membrane protein 1, PfEMP1 (VAR)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "PF3D7_0100300\tVal1028Leu\terythrocyte membrane protein 1, PfEMP1 (VAR)\n",
       "PF3D7_0100600\tAla167Thr\trifin,PIR protein (RIF)\n",
       "PF3D7_0100800\tLys22Gln\trifin,PIR protein (RIF)\n",
       "PF3D7_0100800\tMet26Lys\trifin,PIR protein (RIF)\n",
@@ -4585,13 +4579,7 @@
       "PF3D7_0113800\tGln725Glu\tDBL containing protein, unknown function\n",
       "PF3D7_0113800\tAsn731Asp\tDBL containing protein, unknown function\n",
       "PF3D7_0113800\tGlu839Lys\tDBL containing protein, unknown function\n",
-      "PF3D7_0113800\tAla874Thr\tDBL containing protein, unknown function\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "PF3D7_0113800\tAla874Thr\tDBL containing protein, unknown function\n",
       "PF3D7_0113800\tLys883Arg\tDBL containing protein, unknown function\n",
       "PF3D7_0113800\tTyr1020Asn\tDBL containing protein, unknown function\n",
       "PF3D7_0113800\tMet1076Leu\tDBL containing protein, unknown function\n",
@@ -4686,7 +4674,13 @@
       "PF3D7_1000100\tLys1982Thr\terythrocyte membrane protein 1, PfEMP1 (VAR)\n",
       "PF3D7_1000100\tThr1995Met\terythrocyte membrane protein 1, PfEMP1 (VAR)\n",
       "PF3D7_1000100\tAsp2013Asn\terythrocyte membrane protein 1, PfEMP1 (VAR)\n",
-      "PF3D7_1000100\tSer2021Asn\terythrocyte membrane protein 1, PfEMP1 (VAR)\n",
+      "PF3D7_1000100\tSer2021Asn\terythrocyte membrane protein 1, PfEMP1 (VAR)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "PF3D7_1000400\tIle341Val\trifin,PIR protein (RIF)\n",
       "PF3D7_1000400\tVal338Glu\trifin,PIR protein (RIF)\n",
       "PF3D7_1000400\tThr322Ala\trifin,PIR protein (RIF)\n",
@@ -5434,7 +5428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "2fc632e6",
    "metadata": {},
    "outputs": [],
@@ -5455,7 +5449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "8e2c9bd4",
    "metadata": {},
    "outputs": [],
@@ -5541,7 +5535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "d0467b0a",
    "metadata": {},
    "outputs": [
@@ -5591,7 +5585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "0eeeb6dd",
    "metadata": {},
    "outputs": [],
@@ -5669,7 +5663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "90f72a4e",
    "metadata": {},
    "outputs": [],
@@ -5692,7 +5686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "a93e58fa",
    "metadata": {},
    "outputs": [],
@@ -5708,7 +5702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "469e4266",
    "metadata": {},
    "outputs": [],
@@ -5735,7 +5729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "020d127d",
    "metadata": {},
    "outputs": [],
@@ -5754,7 +5748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "deafb6ae",
    "metadata": {},
    "outputs": [],
@@ -5765,7 +5759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "b570a7a0",
    "metadata": {},
    "outputs": [],
@@ -5830,7 +5824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "ca9851ad",
    "metadata": {},
    "outputs": [],
@@ -5852,7 +5846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "6faf8d9a",
    "metadata": {},
    "outputs": [],
@@ -5876,7 +5870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "235d1f41",
    "metadata": {},
    "outputs": [],
@@ -6015,7 +6009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "ef0f5ff5",
    "metadata": {},
    "outputs": [
@@ -6039,6 +6033,281 @@
     "\n",
     "print(len(parent_mutation_records_dict))\n",
     "parent_mutation_records_dict['Fidock-PI4K-Dd2Parent'] = get_all_variants('Fidock-PI4K-Dd2Parent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "34381477",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fidock-Dd2WT-B2\n",
+      "Harzianin-Dd2-B2-bulk-parent\n",
+      "Goldberg-Dd2-B2-Parent-3-2020\n",
+      "Goldberg-Dd2-B2-Fidock-Parent\n",
+      "Goldberg-Dd2-B2-Parent-9-2018\n",
+      "Goldberg-Dd2-B2-Parent\n",
+      "Goldberg-Dd2-B2-11-2018\n",
+      "Goldberg-Dd2-B2-Parent-12-2020\n",
+      "Goldberg-Dd2-B2-Parent-12-2020-2\n",
+      "Goldberg-Dd2-B2-Parent-3-2021\n",
+      "Fidock-Dd2B2-20170519-Parent\n",
+      "Fidock-Dd2-B2-Parent\n",
+      "Goldberg-Dd2-B2-Parent-8-2021\n",
+      "Fidock-Dd2B2-TKL3KO-parent\n"
+     ]
+    }
+   ],
+   "source": [
+    "for parent in parent_mutation_records_dict:\n",
+    "    if 'B2' in parent:\n",
+    "        print(parent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "fa67c564",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Candidate(s):\n",
+      "0 Wirth-Pik1904-Parent-1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('Wirth-Pik1904-Parent-1', 0),\n",
+       " ('Wirth-Pik1904-Parent-2', 12171),\n",
+       " ('Wirth-Pikine19-04-parent', 14804),\n",
+       " ('Fidock-Andrew-0482-E11', 43517),\n",
+       " ('Fidock-Andrew-0212-B11', 43713),\n",
+       " ('Goldberg-Dd2-B2-Parent-3-2020', 43777),\n",
+       " ('MD133-Dd2-bulk-parent', 43780),\n",
+       " ('Matt-621-Dd2P', 43822),\n",
+       " ('Fidock-Andrew-0197-A9', 43830),\n",
+       " ('Fidock-Andrew-0306-C5', 43838),\n",
+       " ('Goldberg-Dd2-pol-delta-Parent-3-2020', 43841),\n",
+       " ('Lee-Dd2pol-Parent', 43853),\n",
+       " ('Goldberg-Dd2-B2-Parent-8-2021', 43868),\n",
+       " ('TCOLF-Dd2pol-Parent', 43871),\n",
+       " ('Wirth-Desoxyepothilone-B-Dd2-pol-delta-Parent-1-22-2020', 43885),\n",
+       " ('Winzeler-UCF501-Dd2-ParentA', 43890),\n",
+       " ('Winzeler-UCF501-Dd2-ParentB', 43890),\n",
+       " ('Goldberg-Dd2-B2-Parent-3-2021', 43913),\n",
+       " ('ERR299194-Dd2-parent', 43917),\n",
+       " ('Wirth-Thies03209-Parent-2', 43924),\n",
+       " ('Winzeler-MD133-Dd2-Parent', 43935),\n",
+       " ('Fidock-407-Dd2Parent', 44004),\n",
+       " ('Fidock-Andrew-0164-G3', 44017),\n",
+       " ('Fidock-Dd2WT-B2', 44020),\n",
+       " ('BMGF-Fidock-Marcus-Dd2', 44024),\n",
+       " ('Goldberg-Dd2-B2-Parent-12-2020-2', 44042),\n",
+       " ('Wirth-Thies03209-Parent-1', 44043),\n",
+       " ('Yeh-Dd2-Parent', 44066),\n",
+       " ('Lee-Dd2pol-day1-cloneE8', 44077),\n",
+       " ('Lee-Dd2-day1-clone', 44082),\n",
+       " ('Fidock-Exo1-MarcusParent', 44105),\n",
+       " ('Yeh-W2-Parent-Clone1', 44117),\n",
+       " ('Yeh-W2-Parent-Population', 44117),\n",
+       " ('BMGF-Goldberg-11438-Dd2Parent', 44118),\n",
+       " ('GSK-Dd2F-928-Parent', 44124),\n",
+       " ('ERR328387-7G8-parent', 44141),\n",
+       " ('Lee-Dd2pol-day1-cloneF11', 44179),\n",
+       " ('Goldberg-Dd2-B2-Fidock-Parent', 44196),\n",
+       " ('PabloGNF-Dd2Parent-KAF179', 44213),\n",
+       " ('BMGF-Wirth-3842-Dd2Parent', 44214),\n",
+       " ('Goldberg-Dd2-B2-11-2018', 44217),\n",
+       " ('Fidock-Dd2-B2-Parent', 44222),\n",
+       " ('SRR3091181-GNF179-Dd2-Parent', 44236),\n",
+       " ('Lee-Dd2pol-day1-cloneH11', 44238),\n",
+       " ('Fidock-Andrew-0167-E4', 44256),\n",
+       " ('Morahan-Dd2Parent', 44260),\n",
+       " ('Wirth-Dd2-2D4-parent', 44269),\n",
+       " ('GHDDI-Dd2-WT-YJ', 44322),\n",
+       " ('GHDDI-xiu-Dd2-WT-191024', 44339),\n",
+       " ('GHDDI-YJ-Dd2-WT', 44343),\n",
+       " ('GHDDI-Dd2-WT', 44348),\n",
+       " ('Wirth-Dd2pol-Parent-4-12-20', 44357),\n",
+       " ('Wirth-Dd2-2D4-LF-parent', 44359),\n",
+       " ('GSK-Dd2F-397-Parent', 44375),\n",
+       " ('Wirth-Thies032-09-parent', 44392),\n",
+       " ('Fidock-Cam3-II-C580Y-clH4', 44394),\n",
+       " ('GHDDI-Na-Dd2-WT', 44403),\n",
+       " ('SRR1619236-HFGR-Dd2-Parent', 44432),\n",
+       " ('Winzeler-Dd2-Hypermutator-Parent', 44515),\n",
+       " ('Lamonte-179-Dd2P', 44530),\n",
+       " ('Fidock-Dd2B2-20170519-Parent', 44547),\n",
+       " ('Christin-179-Dd2P', 44557),\n",
+       " ('Goldberg-Dd2-B2-Parent-9-2018', 44560),\n",
+       " ('Dvorin-BCH070-Parent', 44561),\n",
+       " ('Wirth-Dd2-Fidock-Parent', 44597),\n",
+       " ('Harzianin-Dd2-B2-bulk-parent', 44728),\n",
+       " ('Wirth-Halofuginone-Dd2-AH11-31-LFG', 44734),\n",
+       " ('BMGF-Fidock-Dd2exo1', 44764),\n",
+       " ('Wirth-Halofuginone-Dd2-AH11-36-LFI', 44775),\n",
+       " ('Wirth-Halofuginone-Dd2-OC12-ParentLFC', 44832),\n",
+       " ('Winzeler-Dd2-Parent-2-2018', 44881),\n",
+       " ('Fidock-Cam3-II-revK13WT-clC2', 44899),\n",
+       " ('Lamonte-570R-Dd2Parent', 44916),\n",
+       " ('Dd2parent', 44919),\n",
+       " ('Goldberg-Dd2-B2-Parent-12-2020', 44932),\n",
+       " ('Wirth-Halofuginone-Dd2-TC-Parent-LFA', 44942),\n",
+       " ('Dvorin-Dd2-NC17222-Parent', 44954),\n",
+       " ('GSK-Dd2F-405-Parent', 45037),\n",
+       " ('Wirth-Halofuginone-Dd2-OD12-LFE', 45043),\n",
+       " ('Wirth-Dd2WT-Parent', 45101),\n",
+       " ('Wirth-Dd2WT2D4-Parent', 45101),\n",
+       " ('Winzeler-Dd2-Parent-12-2020-PCRAmp', 45179),\n",
+       " ('Winzeler-ABS11-Dd2-Parent-Bulk', 45207),\n",
+       " ('Lee-Dd2-DNAdeltapol-parent', 45213),\n",
+       " ('Stokes-V1S-BSM-WT-F6', 45359),\n",
+       " ('Manu-Fidock-6962-Dd2Parent', 45392),\n",
+       " ('Fidock-PolDeltaKO-Parent-KR', 45674),\n",
+       " ('Stokes-V1S-C580Y-D9', 45699),\n",
+       " ('GSK-MMV903582-Parent1', 45770),\n",
+       " ('Fidock-Dd2-parent-6-4-16', 46348),\n",
+       " ('Goldberg-Dd2-B2-Parent', 46414),\n",
+       " ('Parent_Dd2', 46646),\n",
+       " ('Dd2TM051parent-1', 47834),\n",
+       " ('parent_Dd2', 48226),\n",
+       " ('Dd2TM051parent-2', 48766),\n",
+       " ('Dd2parentEF01', 48813),\n",
+       " ('KADdd2wt', 48818),\n",
+       " ('Fidock-Dd2-Dd2-parent', 49358),\n",
+       " ('Fidock-Marcus-Dd2', 50317),\n",
+       " ('SRR5509280-W2-Selection1-Parent', 51203),\n",
+       " ('Wirth-MMV019721-Dd2-RS2D-P1-130319Dd2', 51292),\n",
+       " ('SRR1503356-UCSF-W2-Parent', 51424),\n",
+       " ('Fidock-Dd2Parent', 53393),\n",
+       " ('Erika-Dd2ParentPQR', 53529),\n",
+       " ('Fidock-PI4K-Dd2Parent', 54882),\n",
+       " ('Dd2Parent', 55186),\n",
+       " ('SRR3239848-GNF179-S1-Dd2-Parent', 55646),\n",
+       " ('Goldberg-3D7-A10-Parent-3-2020', 55984),\n",
+       " ('BMGF-Wirth-3D7-11895', 55985),\n",
+       " ('BMGF-Goldberg-3D7-9063', 55987),\n",
+       " ('Goldberg-3D7-A10-Parent-3-2021', 55987),\n",
+       " ('Goldberg-3D7Parent-789', 55989),\n",
+       " ('Goldberg-3D7-PMY-C5', 55989),\n",
+       " ('McFadden-Ver-3D7P', 55990),\n",
+       " ('Goldberg-3D7-PMZ-H11', 55990),\n",
+       " ('Wirth-3D7G-Parent-12-2018', 55992),\n",
+       " ('Goldberg-3D7-A10-11-2018', 55992),\n",
+       " ('Goldberg-3D7-A10-Parent', 55993),\n",
+       " ('BMGF-GSK-3D7Parent', 55994),\n",
+       " ('Wirth-Goldberg-3D7-A10-C276Y-Parent', 55995),\n",
+       " ('Yeh-3D7-Parent', 55996),\n",
+       " ('Wirth-3D7-Parent', 55999),\n",
+       " ('Lamonte-179-3D7P', 56001),\n",
+       " ('BMGF-Winzeler-3D7-4539', 56002),\n",
+       " ('Wirth-3D7-Goldberg', 56002),\n",
+       " ('BMGF-GSK-3D7P3', 56003),\n",
+       " ('TropIQ-NF54luc-Parent', 56003),\n",
+       " ('ERR299189-3D7-parent', 56004),\n",
+       " ('Kainomyx-Parent', 56006),\n",
+       " ('BMGF-Goldberg-11438-DR-3D7P', 56007),\n",
+       " ('Wirth-3D7-Goldberg-Parent', 56007),\n",
+       " ('BMGF-Wirth-668399-3D7P', 56008),\n",
+       " ('Wirth-3D7GSK-DSM265-MTE003B-E0G2N1-RP1', 56008),\n",
+       " ('SRR3722054-3D7-Parent-fixed', 56008),\n",
+       " ('BMGF-GSK-3D7P1', 56009),\n",
+       " ('BMGF-Winzeler-5391-3D7Parent', 56010),\n",
+       " ('GHDDI-3D7-WT', 56011),\n",
+       " ('Tilley-3D7-Parent', 56011),\n",
+       " ('Wirth-Goldberg-3D7-A10-Parent', 56011),\n",
+       " ('SRR3238432-GNF179-S1-3D7-Parent', 56012),\n",
+       " ('Wirth-3D7-Goldberg-A10-Parent-95', 56012),\n",
+       " ('Goldberg-3D7-A10-Parent-9-2018', 56014),\n",
+       " ('Wirth-3D7GSK-Parent', 56014),\n",
+       " ('Wirth-MMV019721-3D7-RS1C-P1-2802193D7', 56014),\n",
+       " ('Wirth-3D7G-DSM265-Parent', 56014),\n",
+       " ('BMGF-Fidock-029272-3D7P', 56015),\n",
+       " ('BMGF-Wirth-3D7-11-1-13', 56015),\n",
+       " ('Gillet-3D7-Parent', 56017),\n",
+       " ('BMGF-Fidock-3D7P-852-7224-SOFTCLIP', 56018),\n",
+       " ('Wirth-MMV008434-3D7-A10-Parent', 56021),\n",
+       " ('Wirth-3D7-elk1--Parent', 56023),\n",
+       " ('Wirth-3D7-elk1p-Parent', 56023),\n",
+       " ('Wirth-MTE003-3D7-10C', 56025),\n",
+       " ('GSK-WT1--MMV010545-3D7G-Parent', 56025),\n",
+       " ('Christin-179-3D7P', 56027),\n",
+       " ('Wree-Gametocyte-G3Parent', 56027),\n",
+       " ('Morahan-3D7Parent', 56028),\n",
+       " ('SRR3239500-GNF179-S2-3D7-Parent', 56028),\n",
+       " ('Spillman-P13C-parent', 56028),\n",
+       " ('GSK-WT2-MMV023388-3D7G-Parent', 56028),\n",
+       " ('Catteruccia-CL241-NF54-Parent', 56028),\n",
+       " ('Purva-3D7-parent-6-16', 56030),\n",
+       " ('3D7-C3', 56030),\n",
+       " ('Wirth-3D7G-DSM267-Parent', 56030),\n",
+       " ('Wirth-3D7-A10-parent', 56031),\n",
+       " ('Winzeler-MMV023949-3D7-Parent', 56031),\n",
+       " ('Wirth-3D7GSK-DSM265-MTE003B-E0G2N4-RP1', 56034),\n",
+       " ('Wirth-MTE003-3D7-GSK-11P-parent', 56034),\n",
+       " ('Charisse-3D7P', 56035),\n",
+       " ('Fisher-3D7P-C3', 56038),\n",
+       " ('Wirth-3D7GSK-DSM265-MTE003B-E0G2N2-RP1', 56039),\n",
+       " ('EvoParent', 56042),\n",
+       " ('3D7-C4', 56042),\n",
+       " ('BMGF-Goldberg-3D7A10Parent', 56063),\n",
+       " ('PabloGNF-3D7Parent-789', 56067),\n",
+       " ('Wirth-MTE003-3D7-11P', 56068),\n",
+       " ('DvorinP3', 56075),\n",
+       " ('659', 56077),\n",
+       " ('Wirth-3D7G-Parent', 56078),\n",
+       " ('Wirth-3D7-GSK-Parent', 56078),\n",
+       " ('Wirth-3D7-Wirth-Parent', 56078),\n",
+       " ('SRR1503358-SJ-3D7-Parent', 56078),\n",
+       " ('Fidock-3D7-Parent', 56078),\n",
+       " ('Goldberg-3D7-Parent', 56078),\n",
+       " ('Fidock-Dd2-Parent', 56078),\n",
+       " ('GSK-MMV903582-Parent23', 56078),\n",
+       " ('ParentDd2', 56078),\n",
+       " ('Wirth-Dd2F-Parent', 56078),\n",
+       " ('Wirth-Dd2-2D4-Parent', 56078),\n",
+       " ('SRR2728500-BRD-Dd2-Parent-fixed', 56078),\n",
+       " ('SRR941239-DSM1-Dd2-Parent-fixed', 56078),\n",
+       " ('SRR1025007-Pyrazole-Dd2-Parent', 56078),\n",
+       " ('Fidock-Dd2B2-TKL3KO-parent', 56078),\n",
+       " ('Goldberg-Dd2-Parent', 56078),\n",
+       " ('DvorinP', 56078),\n",
+       " ('DvorinP2', 56078),\n",
+       " ('Goldberg_parent_P', 56078),\n",
+       " ('Fidock-Caroline-7G8cl1', 56078),\n",
+       " ('Wirth-Dd2pol-parent-2021-07-22', 56078),\n",
+       " ('Fidock-Dd2pol-Day0', 56078),\n",
+       " ('Wirth-ATQ-NF54-parent', 56078),\n",
+       " ('Wirth-ELQs-NF54-parent', 56078),\n",
+       " ('GHDDI-NF54-WT', 56078),\n",
+       " ('SRR9972923-CXP186052-NF54-Parent', 56078),\n",
+       " ('SRR5509281-W2-Selection2-Parent', 56078),\n",
+       " ('Fidock-DSM265-F1001-D1-SWGA', 56078),\n",
+       " ('Fidock-DSM265-F1008-D1-SWGA', 56078),\n",
+       " ('Fidock-DSM265-F1009-D1-SWGA', 56078),\n",
+       " ('Fidock-DSM265-F1010-D1-SWGA', 56078),\n",
+       " ('Fidock-DSM265-F2001-D1-SWGA', 56078),\n",
+       " ('Fidock-DSM265-F2005-D1-SWGA', 56078),\n",
+       " ('Fidock-DSM265-F2009-D1-SWGA', 56078)]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = get_all_variants('Wirth-Pik1904-Parent-1')\n",
+    "sorted_parent_count_tups = find_closest_parent(x, parent_mutation_records_dict)\n",
+    "sorted_parent_count_tups"
    ]
   },
   {
